cmake_minimum_required(VERSION 3.7)
project(Ch3)

set(Boost_USE_STATIC_LIBS OFF) 
set(Boost_USE_MULTITHREADED ON)  
set(Boost_USE_STATIC_RUNTIME OFF) 
set(BOOST_ROOT C:/boost) 
find_package(Boost 1.79.0) 

if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS}) 
    LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
    add_executable(Ch3 "Ch3.cpp")
    target_link_libraries(Ch3 ${Boost_LIBRARIES})
else()
    message(STATUS "Fail asdasd!")
endif()

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CMAKE_CXX_STANDARD 17)
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
